Fix icons and post title alignment.

--- a/view/src/index.css
+++ b/view/src/index.css
@@ -5,7 +5,7 @@
 
 .post-list__item {
     display: grid;
-    grid-template-columns: 50px 1fr 300px;
+    grid-template-columns: 50px 1fr minmax( 350px, 1fr);
     align-items: center;
     padding: 15px 20px;
     border-bottom: 1px solid #ccc;
@@ -39,8 +39,7 @@
 
 .post-list__item__title {
     color: #111;
-    margin-top: 5px;
-    margin-bottom: 0;
+    margin: 0;
     padding-left: 20px;
 }
 
@@ -64,8 +63,13 @@
     }
 }
 
-.wp-core-ui .post-list__item__meta a.button {
+.wp-core-ui .post-list__item__meta .button {
     margin-left: 10px;
+}
+
+.wp-core-ui .post-list__item__meta .dashicons {
+    transform: scale(0.98);
+    line-height: inherit;
 }
 
 .post-list__item__meta {
